All labs but very last completed Move model hook code into a service so that you can re-use it in different routes.
THEN:create an employees route that shows all employees regardless of team, and change the team routes to filter all employees using a dynamic segment.

--- a/app/products/template.hbs
+++ b/app/products/template.hbs
@@ -1,10 +1,21 @@
 {{!-- {{outlet}} --}}
 <!-- app/products/template.hbs -->
 
-<!-- {{outlet}} -->
+
+
+{{!-- <h2> Product Listings </h2>
+<ul>
+  {{#each model as |product|}}
+    {{#link-to 'product' product tagName='li'}} {{product.name}} {{/link-to}}
+  {{/each}}
+</ul> --}}
+
+
 <h2> Product Listings </h2>
 <ul>
-{{#each model as |product|}}
-  <li>{{product.name}}</li>
-{{/each}}
+  {{#each model as |product|}}
+    {{#link-to 'product' product tagName='li'}} {{product.name}} {{/link-to}}
+  {{/each}}
 </ul>
+
+{{!-- items ARE clickable, they just dont appear as clickable wihtout <a> --}}
