--- a/app/product/template.hbs
+++ b/app/product/template.hbs
@@ -1,1 +1,11 @@
-{{outlet}}
+{{!-- {{outlet}} --}}
+
+<!-- app/product/template.hbs -->
+
+<!-- {{outlet}} -->
+
+<h2> Product Details </h2>
+<h4>{{model.name}}</h4>
+<h5>${{model.price}}</h5>
+<p>Manufactured by <em>{{model.manufacturer}}</em></p>
+{{#link-to 'products'}}Back to Product Listings{{/link-to}}
